<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:orientation="horizontal"
            android:elevation="@dimen/dp_3"
            android:gravity="center_vertical"
    >

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/black_back"
                   android:layout_marginStart="@dimen/dp_15"
                   android:padding="@dimen/dp_5"
                   android:id="@+id/imgBackWorkHistory"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_16"
                  android:fontFamily="@font/montserrat_semibold"
                  android:textColor="@color/black"
                  android:text="@string/time_logs"
                  android:textAlignment="viewStart"
                  android:layout_marginStart="@dimen/dp_10"
        />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerWorkHistory"
            android:layout_marginTop="@dimen/dp_10"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/llErrorWorkHistory"
                  android:gravity="center"
                  android:visibility="gone"

    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_15"
                  android:textAlignment="center"
                  android:layout_marginEnd="@dimen/dp_20"
                  android:layout_marginStart="@dimen/dp_20"
                  android:text="@string/no_internet"
        />


        <Button android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/button_background"
                android:text="@string/retry"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="@dimen/dp_35"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:layout_marginBottom="@dimen/dp_10"
                android:id="@+id/btnRetryWorkHistory"

        />

    </LinearLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/sp_14"
              android:text="@string/no_joblist"
              android:id="@+id/txtNoWorkHistory"
              android:visibility="gone"
              android:textAlignment="viewStart"
              android:layout_centerInParent="true"


    />

</LinearLayout>