<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:orientation="horizontal"
            android:elevation="@dimen/dp_3"
            android:gravity="center_vertical"
            android:id="@+id/taskHistoryHeader"
    >

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/black_back"
                   android:layout_marginStart="@dimen/dp_10"
                   android:padding="@dimen/dp_5"
                   android:id="@+id/imgBackTaskHistory"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_16"
                  android:textAlignment="viewStart"
                  android:text="@string/task_history"
                  android:fontFamily="@font/montserrat_semibold"
                  android:textColor="@color/black"
                  android:layout_marginStart="@dimen/dp_10"
        />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/taskHistoryHeader"
            android:id="@+id/recyclerTaskHistory"

    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/sp_14"
              android:text="@string/empty_task_list"
              android:id="@+id/txtNoTaskTaskHistory"
              android:visibility="gone"
              android:textAlignment="viewStart"
              android:layout_centerInParent="true"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/llErrorTaskHistory"
                  android:gravity="center"
                  android:visibility="gone"

    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_15"
                  android:id="@+id/txtNoInternetTaskHistory"
                  android:textAlignment="center"
                  android:text="@string/no_internet"

        />

        <Button android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/button_background"
                android:text="@string/retry"
                android:fontFamily="@font/montserrat_medium"
                android:id="@+id/btnRetryTaskHistory"
                android:layout_marginTop="@dimen/dp_35"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:layout_marginBottom="@dimen/dp_10"
        />

    </LinearLayout>

</RelativeLayout>