<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:elevation="@dimen/dp_3"
              android:background="@drawable/dialog_bg"
              android:layout_marginStart="@dimen/dp_15"
              android:layout_marginEnd="@dimen/dp_15"
>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="@dimen/dp_10"

    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/text_bg"
                  android:textSize="@dimen/sp_13"
                  android:fontFamily="@font/montserrat_medium"
                  android:layout_marginTop="@dimen/dp_5"
                  android:text="@string/login_msg"
                  android:layout_marginEnd="@dimen/dp_35"
                  android:layout_marginStart="@dimen/dp_35"
                  android:textAlignment="center"

        />

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_marginTop="@dimen/dp_30"
                android:textSize="@dimen/sp_16"
                android:text="@string/register"
                android:fontFamily="@font/montserrat_medium"
                android:id="@+id/btnRegisterDailog"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/dp_35"
        />

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/dp_1"
              android:layout_marginBottom="@dimen/dp_15"
              android:background="@color/dialog_view"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:layout_marginBottom="@dimen/dp_5"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/black"
                      android:textSize="@dimen/sp_11"
                      android:textAlignment="viewStart"
                      android:fontFamily="@font/montserrat_regular"
                      android:text="@string/already_account"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/blue"
                      android:textSize="@dimen/sp_11"
                      android:textAlignment="viewStart"
                      android:fontFamily="@font/montserrat_regular"
                      android:id="@+id/txtLoginHereRegisterDailog"
                      android:text="@string/login_here"
                      android:layout_marginStart="@dimen/dp_2"
            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>



