<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/dp_50"
                  android:background="@color/white"
                  android:orientation="horizontal"
                  android:elevation="@dimen/dp_3"
                  android:gravity="center_vertical"

    >
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/black_back"
                   android:layout_marginStart="@dimen/dp_15"
                   android:padding="@dimen/dp_5"
                   android:id="@+id/imgBackContactUs"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_16"
                  android:textAlignment="viewStart"
                  android:fontFamily="@font/montserrat_semibold"
                  android:textColor="@color/black"
                  android:text="@string/contact_us"
                  android:layout_marginStart="@dimen/dp_10"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/dp_40"
                  android:layout_marginTop="@dimen/dp_20"
                  android:layout_marginStart="@dimen/dp_10"
                  android:layout_marginEnd="@dimen/dp_10"
                  android:background="@drawable/register_background"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
    >

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_12"
                  android:textColor="@color/text_light"
                  android:hint="@string/name"
                  android:fontFamily="@font/montserrat_regular"
                  android:id="@+id/edtNameContactUs"
                  android:lines="1"
                  android:textAlignment="viewStart"
                  android:maxLength="30"
                  android:inputType="textCapWords"
                  android:drawableStart="@drawable/username"
                  android:drawablePadding="@dimen/dp_10"
                  android:background="@null"
                  android:layout_marginStart="@dimen/dp_8"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/dp_40"
                  android:layout_marginTop="@dimen/dp_15"
                  android:layout_marginStart="@dimen/dp_10"
                  android:layout_marginEnd="@dimen/dp_10"
                  android:background="@drawable/register_background"
                  android:gravity="center_vertical"
                  android:orientation="horizontal"
    >

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp_12"
                  android:hint="@string/email"
                  android:textColor="@color/text_light"
                  android:fontFamily="@font/montserrat_regular"
                  android:id="@+id/edtEmailContactUs"
                  android:lines="1"
                  android:inputType="textEmailAddress"
                  android:maxLength="30"
                  android:textAlignment="viewStart"
                  android:drawableStart="@drawable/email_id"
                  android:drawablePadding="@dimen/dp_10"
                  android:background="@null"
                  android:layout_marginStart="@dimen/dp_8"

        />

    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/text_bg"
              android:layout_marginStart="@dimen/dp_10"
              android:layout_marginEnd="@dimen/dp_10"
              android:textSize="@dimen/sp_16"
              android:textAlignment="viewStart"
              android:fontFamily="@font/montserrat_medium"
              android:layout_marginTop="@dimen/dp_25"
              android:text="@string/describe_your_problem"
              android:layout_marginBottom="@dimen/dp_15"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="@dimen/dp_150"
              android:textSize="@dimen/sp_14"
              android:id="@+id/edtProblemContactUs"
              android:gravity="start"
              android:padding="@dimen/dp_10"
              android:fontFamily="@font/montserrat_regular"
              android:layout_marginStart="@dimen/dp_10"
              android:layout_marginEnd="@dimen/dp_10"
              android:layout_marginTop="@dimen/dp_10"
              android:hint="@string/type_here"
              android:textAlignment="viewStart"
              android:inputType="textMultiLine|textCapSentences|textImeMultiLine"
              android:background="@drawable/register_background"
              android:layout_marginBottom="@dimen/dp_10"/>

    <Button android:layout_width="match_parent"
            android:layout_height="47dp"
            android:id="@+id/btnSendContactUs"
            android:background="@drawable/button_background"
            android:text="@string/send_message"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_50"
            android:textSize="@dimen/sp_18"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_25"
    />

</LinearLayout>