<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white"
                android:orientation="horizontal"
                android:elevation="@dimen/dp_3"
                android:gravity="center_vertical"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/black_back"
                       android:layout_marginStart="@dimen/dp_15"
                       android:padding="@dimen/dp_5"
                       android:id="@+id/imgBackChangeLang"
            />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/sp_16"
                      android:fontFamily="@font/montserrat_semibold"
                      android:textColor="@color/black"
                      android:text="@string/change_language"
                      android:textAlignment="viewStart"
                      android:layout_marginStart="@dimen/dp_10"
            />

        </LinearLayout>

        <RadioGroup android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:id="@+id/langRadioGroup"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:orientation="vertical"
        >

            <RadioButton android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/english"
                         android:textAlignment="viewStart"
                         android:textSize="@dimen/sp_12"
                         android:fontFamily="@font/montserrat_regular"
                         android:id="@+id/radioBtnEnglish"
            />
            <RadioButton android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textSize="@dimen/sp_12"
                         android:textAlignment="viewStart"
                         android:fontFamily="@font/montserrat_regular"
                         android:text="@string/arabic"
                         android:layout_marginTop="@dimen/dp_10"
                         android:id="@+id/radioBtnArabic"
            />

        </RadioGroup>

    </LinearLayout>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_25"
            android:background="@drawable/button_background"
            android:text="@string/submitss"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_medium"
            android:id="@+id/btnChangeLangSubmit"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_15"
            android:textSize="@dimen/sp_18"
            android:layout_marginBottom="@dimen/dp_25"

    />

</RelativeLayout>